--- a/AgentPod.yaml
+++ b/AgentPod.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: swashikan-jenkins
+  name: sch-sit2-jenkins
 spec:
   containers:
-  - name: swashikan
-    image: 791532114280.dkr.ecr.us-east-1.amazonaws.com/swashikan:lsacone
+  - name: sch-code-builder
+    image: 791532114280.dkr.ecr.us-east-1.amazonaws.com/sch-build-agent:sch-sit2-final234
     resources:
         limits:
-          cpu: "500m"
+          cpu: "1000m"
           memory: "12Gi"
         requests:
           cpu: "500m"
@@ -25,3 +25,6 @@ spec:
     - name: docker-config
       configMap:
         name: docker-config
+    - name: "workspace-volume"
+      persistentVolumeClaim:
+        claimName: dh-pv
