--- a/dashboard.yaml
+++ b/dashboard.yaml
@@ -24,6 +24,8 @@ spec:
       value: https://{DH_URL}.*
     - name: PYTHONPATH
       value: /home
+    - name: primary_account_name
+      value: sch-master
     - name: target_account
       value: {TARGET_ACCOUNT_NAME}
     image: 764100877844.dkr.ecr.us-east-1.amazonaws.com/dh-preview-apps:dh-metrics
